Добавить асинхронные задачи
